fix(get-token): handle submaps in dart-sass
New test 'Can return submaps' to cover the failure case. Test previously passed on node-sass, and failed on dart-sass.

Added dart-sass tests, using most of existing tests. A few major test areas are excluded b/c the test output is different with dart-sass.

--- a/sass/core/_parser.scss
+++ b/sass/core/_parser.scss
@@ -211,7 +211,9 @@
 
         @if (type-of($string) == 'string') and str-index($string, $hash) {
           $new: get-token($haystack, $key);
-          $string: _a_str-replace($string, $hash, $new, 'all');
+          @if (type-of($new) != 'map') {
+            $string: _a_str-replace($string, $hash, $new, true);
+          }
         }
       }
 
