--- a/sass/core/_strings.scss
+++ b/sass/core/_strings.scss
@@ -38,7 +38,7 @@
 /// @param {*} $new [null] -
 ///   A new sub-string to replace the old
 /// @param {boolean} $replace-all [false] -
-///   A new sub-string to replace the old
+///   If true, replace all instances of $old in $string
 /// @return {string} -
 ///   Original string, with substring replaced
 @function _a_str-replace(
@@ -59,7 +59,7 @@
     @return $return;
   }
 
-  // Force $old to string
+  // Force $old, $string to type string
   $old: if($old and (type-of($old) == 'string'), $old, '#{$old}');
   $string: if((type-of($string) == 'string'), $string, '#{$string}');
 
@@ -71,8 +71,16 @@
   @if $string == $old {
     $return: $new;
   } @else if $i {
-    // Force $new & $string to string
-    $new: if((type-of($new) == 'string') or (not $new), $new, '#{$new}');
+    // Convert $new to a string
+    @if ($new and (type-of($new) != 'string')) {
+      @if (type-of($new) == 'map') {
+        @warn '_a_str-replace $new parameter cannot be a map';
+        @return $string;
+      }
+      @else {
+        $new: '#{$new}';
+      }
+    }
 
     // before and after…
     $a: if($i > 1, str-slice($string, 1, $i - 1), '');
